@@ -16,6 +16,9 @@ with their complete changes, see the AUTHORS file.
 Implicit `int` pointer declarations, e.g., `*p`, are now correctly illegal in
 C++.
 
+** Lambdas in C
+Lambdas are not correctly illegal in C.
+
 ** Nested `typedef`s
 Fixed printing of `typedef`s of nested types, e.g.:
 
